# tumor_growth_modeling

./: .gitignore  Bib.bib  Chapter1.tex  Chapter2.tex  Chapter3.tex  Conclusions.tex  Intro.tex  Progress.tex  README.md  Thesis.tex  Title.tex  VolSU.rtx
data/: siu_1986_regression_low_dose.csv
fig/: rk4_flowchart.drawio  uml_sequence.drawio
practice/: gui.py  model.py  pyproject.toml
