[project]
name = "tumor-model"
version = "0.1.0"
description = ""
authors = [
    {name = "therealmaendeleo",email = "vlad.karmanchikofff@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
