[project]
name = "tumor-growth-modeling"
version = "0.1.0"
description = ""
authors = [
    {name = "therealmaendeleo",email = "vlad.karmanchikofff@gmail.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "scipy (>=1.17.0,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
